src/objects/Milestone_Developer__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Per_Hour__c</fullName>
        <label>Cost Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Developer_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Work</label>
        <referenceTo>Developer_Work__c</referenceTo>
        <relationshipLabel>Milestones Developers</relationshipLabel>
        <relationshipName>Milestones_Developers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <referenceTo>Developer__c</referenceTo>
        <relationshipLabel>Milestones Developers</relationshipLabel>
        <relationshipName>Milestones_Developers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Developing_cost__c</fullName>
        <label>Developing cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Milestones Developers</relationshipLabel>
        <relationshipName>Milestones_Developers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <label>Number of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Milestone Developer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones Developers</pluralLabel>
    <recordTypes>
        <fullName>Early_developing_cost</fullName>
        <active>true</active>
        <label>Early developing cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fixed_developing_cost</fullName>
        <active>true</active>
        <label>Fixed developing cost</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>